--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ httplib2==0.14.0
 imageio==2.6.1
 kiwisolver==1.1.0
 matplotlib==3.1.1
+mysql-connector-python==8.0.17
 networkx==2.4
+nltk==3.4.5
 numpy==1.17.3
 Pillow==6.2.0
 protobuf==3.10.0
